vectorとscalarの区別なくsympyの式に代入できる関数を実装。ついでにコードを整理。（実行の遅さと計算の精度は変わらず。）

--- a/agiPyMemo.ipynb
+++ b/agiPyMemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -23,9 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -51,38 +51,60 @@
     "for i in np.arange(n):\n",
     "    p0 = P[i,0:d]\n",
     "    Xs = np.append(Xs,np.dot(p0,e1))\n",
-    "    Ys = np.append(Ys,np.dot(p0,e2))"
+    "    Ys = np.append(Ys,np.dot(p0,e2))\n",
+    "    \n",
+    "# V:sp.Matrix(MatrixSymbol), Vv : np.ndarray\n",
+    "def subV(e, V, Vv):\n",
+    "    shape = Vv.shape\n",
+    "    for i in range(len(Vv)):\n",
+    "            e = e.subs(V[i,0], Vv[i])\n",
+    "    return e\n",
+    "# Vs, Vvs : list\n",
+    "def subV_mul(e,Vs,Vvs):\n",
+    "    if len(Vvs) > 0:\n",
+    "        if isinstance(Vvs[0], np.ndarray):\n",
+    "            return subV_mul(subV(e,Vs[0],Vvs[0]),Vs[1:],Vvs[1:])\n",
+    "        else:\n",
+    "            return subV_mul(e.subs(Vs[0],Vvs[0]),Vs[1:],Vvs[1:])\n",
+    "    return e"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "x2,y2 = (Xs[0],Ys[0])\n",
-    "p = P[0]\n",
-    "a1,b1,c1,a2,b2,c2,t,s = sp.symbols('a1 b1 c1 a2 b2 c2 t s')\n",
-    "var = [a1,b1,c1,a2,b2,c2,t,s]\n",
-    "E1 = a1*e1 + b1*e2 + c1*p\n",
-    "E2 = a2*e1 + b2*e2 + c2*p\n",
-    "r  = s*e1 + t*e2\n",
+    "sp.var('a1 b1 c1 a2 b2 c2 t s')   # variables\n",
+    "sp.var('x2_s y2_s p_s e1_s e2_s') # values\n",
+    "p_s = sp.MatrixSymbol('p_s', d, 1)\n",
+    "e1_s = sp.MatrixSymbol('e1_s', d, 1)\n",
+    "e2_s = sp.MatrixSymbol('e2_s', d, 1)\n",
+    "p_s = sp.Matrix(p_s)\n",
+    "e1_s = sp.Matrix(e1_s)\n",
+    "e2_s = sp.Matrix(e2_s)\n",
+    "var = (a1,b1,c1,a2,b2,c2,t,s)\n",
+    "v = [x2_s, y2_s, p_s, e1_s, e2_s]\n",
+    "vv = [Xs[0],Ys[0],P[0],e1,e2]\n",
+    "E1 = a1*sp.Matrix(e1_s) + b1*sp.Matrix(e2_s) + c1*sp.Matrix(p_s)\n",
+    "E2 = a2*sp.Matrix(e1_s) + b2*sp.Matrix(e2_s) + c2*sp.Matrix(p_s)\n",
+    "r  = s*sp.Matrix(e1_s) + t*sp.Matrix(e2_s)\n",
     "\n",
-    "f = np.array([\n",
-    "\t\tnp.dot(E1,E1) - 1,\n",
-    "\t\tnp.dot(E2,E2) - 1,\n",
-    "\t\tnp.dot(E1,E2),\n",
-    "\t\tnp.dot(r,r) - 1,\n",
-    "\t\tnp.dot(E1,r) - np.dot(e1,r),\n",
-    "\t\tnp.dot(E2,r) - np.dot(e2,r),\n",
-    "\t\tnp.dot(p,E1) - x2,\n",
-    "\t\tnp.dot(p,E2) - y2\n",
+    "f = Matrix([\n",
+    "\t\tE1.dot(E1) - 1,\n",
+    "\t\tE2.dot(E2) - 1,\n",
+    "\t\tE1.dot(E2),\n",
+    "\t\tr.dot(r) - 1,\n",
+    "\t\tE1.dot(r) - e1_s.dot(r),\n",
+    "\t\tE2.dot(r) - e2_s.dot(r),\n",
+    "\t\tp_s.dot(E1) - x2_s,\n",
+    "\t\tp_s.dot(E2) - y2_s\n",
     "\t\t])\n",
     "\n",
-    "func=np.dot(f,f)\n",
-    "lam_f = lambdify((a1,b1,c1,a2,b2,c2,t,s), func, 'numpy')\n",
+    "func = Matrix.norm(f)\n",
+    "lam_f = lambdify(var, subV_mul(func,v,vv), 'numpy')\n",
     "\n",
     "arr = np.array([1,1,1,1,1,1,1,1])\n",
     "def g(args): return lam_f(*args)"
@@ -90,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -147,31 +169,14 @@
     "                    edges[i].set_ydata((edges[i].get_ydata()[0],y0+dy))\n",
     "            \n",
     "            \"\"\"\n",
-    "            global p, e1, e2, temp1, temp2\n",
-    "            x2,y2 = (1,1)\n",
-    "            a1,b1,c1,a2,b2,c2,t,s = sp.symbols('a1 b1 c1 a2 b2 c2 t s')\n",
-    "            var = [a1,b1,c1,a2,b2,c2,t,s]\n",
-    "            E1 = a1*e1 + b1*e2 + c1*p\n",
-    "            E2 = a2*e1 + b2*e2 + c2*p\n",
-    "            r  = s*e1 + t*e2\n",
-    "            f = np.array([\n",
-    "            np.dot(E1,E1) - 1,\n",
-    "            np.dot(E2,E2) - 1,\n",
-    "            np.dot(E1,E2),\n",
-    "            np.dot(r,r) - 1,\n",
-    "            np.dot(E1,r) - np.dot(e1,r),\n",
-    "            np.dot(E2,r) - np.dot(e2,r),\n",
-    "            np.dot(p,E1) - x2,\n",
-    "            np.dot(p,E2) - y2\n",
-    "            ])\n",
-    "            func=np.dot(f,f)\n",
-    "            lam_f = lambdify((a1,b1,c1,a2,b2,c2,t,s), func, 'numpy')\n",
-    "            arr = np.array([1,1,1,1,1,1,1,1])\n",
-    "            def g(args): return lam_f(*args)\n",
+    "            global p, e1, e2, temp1, temp2, vv\n",
     "            x0, y0, xpress, ypress = self.press\n",
     "            x2 = x0 + event.xdata - xpress\n",
     "            y2 = y0 + event.ydata - ypress\n",
-    "            p = P[int(identifier)]\n",
+    "            vv = [x2,y2,P[int(identifier)],e1,e2]\n",
+    "            lam_f = lambdify(var, subV_mul(func,v,vv), 'numpy')\n",
+    "            arr = np.array([1,1,1,1,1,1,1,1])\n",
+    "            def g(args): return lam_f(*args)\n",
     "            res = opt.minimize(g,arr,method='L-BFGS-B')\n",
     "            e1 = res.x[0]*temp1 + res.x[1]*temp2 + res.x[2]*p\n",
     "            e2 = res.x[3]*temp1 + res.x[4]*temp2 + res.x[5]*p\n",
@@ -199,11 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "event contains (-0.48834002780152058, 0.28108480633993022)\n",
+      "event contains (-1.9628529186821815, -0.10398801648419966)\n"
+     ]
+    }
+   ],
    "source": [
     "gca = plt.gca()\n",
     "nodes = np.array([])\n",
