ちょびっと改良。ノートパソコンの調子が悪いのか実行時間が異常に遅い。

--- a/agiPyMemo.ipynb
+++ b/agiPyMemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -51,63 +51,142 @@
     "for i in np.arange(n):\n",
     "    p0 = P[i,0:d]\n",
     "    Xs = np.append(Xs,np.dot(p0,e1))\n",
-    "    Ys = np.append(Ys,np.dot(p0,e2))\n",
-    "    \n",
-    "# V:sp.Matrix(MatrixSymbol), Vv : np.ndarray\n",
-    "def subV(e, V, Vv):\n",
-    "    shape = Vv.shape\n",
-    "    for i in range(len(Vv)):\n",
-    "            e = e.subs(V[i,0], Vv[i])\n",
-    "    return e\n",
-    "# Vs, Vvs : list\n",
-    "def subV_mul(e,Vs,Vvs):\n",
-    "    if len(Vvs) > 0:\n",
-    "        if isinstance(Vvs[0], np.ndarray):\n",
-    "            return subV_mul(subV(e,Vs[0],Vvs[0]),Vs[1:],Vvs[1:])\n",
-    "        else:\n",
-    "            return subV_mul(e.subs(Vs[0],Vvs[0]),Vs[1:],Vvs[1:])\n",
-    "    return e"
+    "    Ys = np.append(Ys,np.dot(p0,e2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "w"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sp.var('a1 b1 c1 a2 b2 c2 t s')   # variables\n",
-    "sp.var('x2_s y2_s p_s e1_s e2_s') # values\n",
-    "p_s = sp.MatrixSymbol('p_s', d, 1)\n",
-    "e1_s = sp.MatrixSymbol('e1_s', d, 1)\n",
-    "e2_s = sp.MatrixSymbol('e2_s', d, 1)\n",
-    "p_s = sp.Matrix(p_s)\n",
-    "e1_s = sp.Matrix(e1_s)\n",
-    "e2_s = sp.Matrix(e2_s)\n",
-    "var = (a1,b1,c1,a2,b2,c2,t,s)\n",
-    "v = [x2_s, y2_s, p_s, e1_s, e2_s]\n",
-    "vv = [Xs[0],Ys[0],P[0],e1,e2]\n",
-    "E1 = a1*sp.Matrix(e1_s) + b1*sp.Matrix(e2_s) + c1*sp.Matrix(p_s)\n",
-    "E2 = a2*sp.Matrix(e1_s) + b2*sp.Matrix(e2_s) + c2*sp.Matrix(p_s)\n",
-    "r  = s*sp.Matrix(e1_s) + t*sp.Matrix(e2_s)\n",
+    "sp.var('w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sympy.core.symbol.Symbol"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-93-2ae523d84dcd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlam_f\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0me1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0me1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0me1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m//anaconda/lib/python3.5/site-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(_Dummy_8699, _Dummy_8700, P_i, E1, E2, _Dummy_8701, _Dummy_8702, _Dummy_8703, _Dummy_8704, _Dummy_8705, _Dummy_8706, _Dummy_8707, _Dummy_8708)\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ],
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "a1,b1,c1,a2,b2,c2,t,s = sp.symbols('a1 b1 c1 a2 b2 c2 t s')   # variables\n",
+    "x2_s,y2_s = sp.symbols('x2_s y2_s') # values\n",
+    "P_i = sp.MatrixSymbol('P_i', d, 1)\n",
+    "E1 = sp.MatrixSymbol('E1', d, 1)\n",
+    "E2 = sp.MatrixSymbol('E2', d, 1)\n",
+    "#p_s = sp.Matrix(p_s)\n",
+    "#e1_s = sp.Matrix(e1_s)\n",
+    "#e2_s = sp.Matrix(e2_s)\n",
+    "var = (x2_s,y2_s,P_i,E1,E2,a1,b1,c1,a2,b2,c2,t,s)\n",
+    "\n",
+    "_E1 = a1*sp.Matrix(E1) + b1*sp.Matrix(E2) + c1*sp.Matrix(P_i)\n",
+    "_E2 = a2*sp.Matrix(E1) + b2*sp.Matrix(E2) + c2*sp.Matrix(P_i)\n",
+    "R  = s*sp.Matrix(E1) + t*sp.Matrix(E2)\n",
     "\n",
     "f = Matrix([\n",
-    "\t\tE1.dot(E1) - 1,\n",
-    "\t\tE2.dot(E2) - 1,\n",
-    "\t\tE1.dot(E2),\n",
-    "\t\tr.dot(r) - 1,\n",
-    "\t\tE1.dot(r) - e1_s.dot(r),\n",
-    "\t\tE2.dot(r) - e2_s.dot(r),\n",
-    "\t\tp_s.dot(E1) - x2_s,\n",
-    "\t\tp_s.dot(E2) - y2_s\n",
+    "\t\t_E1.dot(_E1) - 1,\n",
+    "\t\t_E2.dot(_E2) - 1,\n",
+    "\t\t_E1.dot(_E2),\n",
+    "\t\tR.dot(R) - 1,\n",
+    "\t\t_E1.dot(R) - sp.Matrix(E1).dot(R),\n",
+    "\t\t_E2.dot(R) - sp.Matrix(E2).dot(R),\n",
+    "\t\tsp.Matrix(P_i).dot(_E1) - x2_s,\n",
+    "\t\tsp.Matrix(P_i).dot(_E2) - y2_s\n",
     "\t\t])\n",
     "\n",
-    "func = Matrix.norm(f)\n",
-    "lam_f = lambdify(var, subV_mul(func,v,vv), 'numpy')\n",
+    "lam_f = lambdify(var, f, 'numpy')\n",
+    "\n",
+    "def lam_f2(x2,y2,p,e1,e2):\n",
+    "    return lambda a1,b1,c1,a2,b2,c2,t,s: np.linalg.norm(lam_f(x2,y2,sp.Matrix(p),sp.Matrix(e1),sp.Matrix(e2),a1,b1,c1,a2,b2,c2,t,s))\n",
     "\n",
     "arr = np.array([1,1,1,1,1,1,1,1])\n",
-    "def g(args): return lam_f(*args)"
+    "\n",
+    "print(lam_f(1,1,e1,e1,e1,1,1,1,1,1,1,1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(_Dummy_8571, _Dummy_8572, p_s, e1_s, e2_s, _Dummy_8573, _Dummy_8574, _Dummy_8575, _Dummy_8576, _Dummy_8577, _Dummy_8578, _Dummy_8579, _Dummy_8580)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(12,)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "print(inspect.signature(lam_f))\n",
+    "\n",
+    "#lam_f(1,1,e1,e1,e2,1,1,1,1,1,1,1,1)\n",
+    "np.ones(12).shape\n",
+    "#sp.simplify(sp.expand(f))"
    ]
   },
   {
@@ -169,14 +248,12 @@
     "                    edges[i].set_ydata((edges[i].get_ydata()[0],y0+dy))\n",
     "            \n",
     "            \"\"\"\n",
-    "            global p, e1, e2, temp1, temp2, vv\n",
+    "            global p, e1, e2, temp1, temp2\n",
     "            x0, y0, xpress, ypress = self.press\n",
     "            x2 = x0 + event.xdata - xpress\n",
     "            y2 = y0 + event.ydata - ypress\n",
-    "            vv = [x2,y2,P[int(identifier)],e1,e2]\n",
-    "            lam_f = lambdify(var, subV_mul(func,v,vv), 'numpy')\n",
-    "            arr = np.array([1,1,1,1,1,1,1,1])\n",
-    "            def g(args): return lam_f(*args)\n",
+    "            f2 = lam_f2(x2,y2,P[int(identifier)],e1,e2)\n",
+    "            def g(args): return f2(*args)\n",
     "            res = opt.minimize(g,arr,method='L-BFGS-B')\n",
     "            e1 = res.x[0]*temp1 + res.x[1]*temp2 + res.x[2]*p\n",
     "            e2 = res.x[3]*temp1 + res.x[4]*temp2 + res.x[5]*p\n",
@@ -189,6 +266,7 @@
     "                Ys[i] = np.dot(p0,e2)\n",
     "                nodes[i].center = (np.dot(p0,e1),np.dot(p0,e2))\n",
     "                nodes[i].figure.canvas.draw()\n",
+    "            \n",
     "                        \n",
     "    def on_release(self, event):\n",
     "        'on release we reset the press data'\n",
@@ -204,21 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "event contains (-0.48834002780152058, 0.28108480633993022)\n",
-      "event contains (-1.9628529186821815, -0.10398801648419966)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\ngca = plt.gca()\\nnodes = np.array([])\\nedges = np.array([])\\n\\nfor i in range(n):\\n    circle = plt.Circle((Xs[i], Ys[i]), radius=0.2, fc='y',label=str(i))\\n    gca.add_patch(circle)\\n    nodes = np.append(nodes,circle)\\n\\nfor e in edge:\\n    line = plt.Line2D((Xs[e[0]-1], Xs[e[1]-1]), (Ys[e[0]-1],Ys[e[1]-1]), lw=1)\\n    gca.add_line(line)\\n    edges = np.append(edges,line)\\n    \\ndcs = []\\nfor node in nodes:\\n    dc = DraggableCircle(node)\\n    dc.connect()\\n    dcs.append(dc)\\n\\nplt.axis('scaled')\\nplt.show()\\n\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "gca = plt.gca()\n",
     "nodes = np.array([])\n",
     "edges = np.array([])\n",
@@ -240,7 +321,8 @@
     "    dcs.append(dc)\n",
     "\n",
     "plt.axis('scaled')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\"\"\""
    ]
   },
   {
@@ -313,7 +395,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -322,7 +406,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -331,7 +417,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -343,7 +431,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
