一先ず完成(agi.py)。コードの長さは161行。インタラクションの速度はかなり遅め。

--- a/jupyter/lamVec.ipynb
+++ b/jupyter/lamVec.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,9 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12,)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "P = np.genfromtxt('csv/mdSpace.csv', delimiter=\",\") \n",
     "n = len(P)\n",
@@ -31,13 +46,18 @@
     "f2[::2] = 0\n",
     "f1 = Ln[0:d] - f2\n",
     "e1 = f1 / np.linalg.norm(f1)\n",
-    "e2 = f2 / np.linalg.norm(f2)"
+    "e2 = f2 / np.linalg.norm(f2)\n",
+    "\n",
+    "P[0].shape\n",
+    "e1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "########## sympy #################\n",
@@ -63,16 +83,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lam_ff = lambdify(var,func,'numpy')\n",
+    "lam_ff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[11.0000000000000],\n       [11.0000000000000]], dtype=object)"
+       "15.556349186104045"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [1,1,1,1,1,1,1,1,1,1,1,1]\n",
+    "N = np.array(lst).astype(float).reshape(12,1)\n",
+    "nrm = np.linalg.norm(N)\n",
+    "lam_ff(N,N,1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Float' object has no attribute 'sqrt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-a36a6bd03e5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlam_ff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m//anaconda/lib/python3.5/site-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(P_i, E1, _Dummy_20, _Dummy_21)\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Float' object has no attribute 'sqrt'"
+     ]
+    }
+   ],
+   "source": [
+    "lam_ff(M,M,1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:3: DeprecationWarning: inspect.getargspec() is deprecated, use inspect.signature() instead\n",
+      "  app.launch_new_instance()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ArgSpec(args=['P_i', 'E1', '_Dummy_20', '_Dummy_21'], varargs=None, keywords=None, defaults=None)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(lam_ff)\n",
+    "import inspect\n",
+    "inspect.getargspec(lam_ff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11.0000000000000],\n",
+       "       [11.0000000000000]], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +245,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def lam(e1, e2):\n",
@@ -99,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "res = opt.minimize(g,[1,1], method='L-BFGS-B')"
@@ -108,13 +282,23 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      fun: 2.4178797926358646e-16\n hess_inv: <2x2 LbfgsInvHessProduct with dtype=float64>\n      jac: array([ 1.99999995,  1.99999995])\n  message: b'ABNORMAL_TERMINATION_IN_LNSRCH'\n     nfev: 63\n      nit: 0\n   status: 2\n  success: False\n        x: array([ 1.,  1.])\n"
+      "      fun: 2.4178797926358646e-16\n",
+      " hess_inv: <2x2 LbfgsInvHessProduct with dtype=float64>\n",
+      "      jac: array([ 1.99999995,  1.99999995])\n",
+      "  message: b'ABNORMAL_TERMINATION_IN_LNSRCH'\n",
+      "     nfev: 63\n",
+      "      nit: 0\n",
+      "   status: 2\n",
+      "  success: False\n",
+      "        x: array([ 1.,  1.])\n"
      ]
     }
    ],
@@ -125,14 +309,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
